--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.4",
     "axios": "^0.27.2",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass-loader": "^13.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
